lilv (0.24.13) unstable;

  * Update zix tree

 -- David Robillard <d@drobilla.net>  Mon, 11 Jan 2021 11:20:00 +0000

lilv (0.24.12) stable;

  * Allow connecting ports to structures in Python
  * Fix potential memory error when joining filesystem paths
  * Fix saving state with files on Windows
  * Fix unlikely undefined behavior when saving state
  * Fix writing state manifests on Windows
  * Remove the need for a generated configuration header

 -- David Robillard <d@drobilla.net>  Thu, 07 Jan 2021 21:46:06 +0000

lilv (0.24.10) stable;

  * Fix memory leaks in lv2bench
  * Fix various minor warnings and other code quality issues
  * Make lilv_world_get() use translations
  * Split and clean up test suite

 -- David Robillard <d@drobilla.net>  Sun, 27 Sep 2020 12:17:02 +0000

lilv (0.24.8) stable;

  * Allow passing strings for URIs in Python API when unambiguous
  * Fix cases where incorrect translation is used
  * Fix deleting state bundles loaded from the model
  * Fix memory leak when dyn-manifest has no plugins (thanks Michael Fisher)
  * Implement state:freePath feature

 -- David Robillard <d@drobilla.net>  Sun, 26 Apr 2020 15:55:26 +0000

lilv (0.24.6) stable;

  * Add more strict error detection when storing plugin state properties
  * Add option to override LV2_PATH in applications
  * Don't print errors when saving state if correct links already exist
  * Fix GCC8 warnings
  * Fix creating directories across drives on Windows
  * Fix issues with loading state with saved files from the model
  * Fix memory errors and Python 3.4+ compatibility in Python bindings
  * Fix unit tests on Windows
  * Make Python bindings more Pythonic

 -- David Robillard <d@drobilla.net>  Sun, 10 Nov 2019 21:39:37 +0000

lilv (0.24.4) stable;

  * Don't attempt to load remote or non-Turtle files
  * Fix saving state when broken links are encountered
  * Gracefully handle plugins with missing binary URIs