@@ -1,8 +1,9 @@
 lilv (0.24.13) unstable;
 
+  * Fix unused parameter warnings
   * Update zix tree
 
- -- David Robillard <d@drobilla.net>  Mon, 11 Jan 2021 11:20:00 +0000
+ -- David Robillard <d@drobilla.net>  Mon, 11 Jan 2021 11:20:41 +0000
 
 lilv (0.24.12) stable;
 
